# CompilerProject-2020Spring

./: .gitmodules  CMakeLists.txt  README-old.md  README.md  编译大作业-第一部分.md  编译大作业-第二部分.md
.github/workflows/: ccpp.yml
include/: IR.h  IRMutator.h  IRPrinter.h  IRVisitor.h  arith.h  debug.h  mytest.h  type.h  y.tab.h
project1/: CMakeLists.txt  run.cc  run.h
project1/cases/: case1.json  case10.json  case2.json  case3.json  case4.json  case5.json  case6.json  case7.json  case8.json  case9.json  example.json
project1/clean/: clean.cc
project1/kernels/: kernel_case1.cc  kernel_case10.cc  kernel_case2.cc  kernel_case3.cc  kernel_case4.cc  kernel_case5.cc  kernel_case6.cc  kernel_case7.cc  kernel_case8.cc  kernel_case9.cc  kernel_example.cc
project1/solution/: IRMutator.cc  IRPrinter.cc  IRVisitor.cc  example_solution.cc  lex.yy.c  mytest.cc  y.tab.cc
project1/yacc/: first.l  in.txt  second.y
project2/: .gitignore  CMakeLists.txt  run2.cc  run2.h
project2/cases/: case1.json  case10.json  case2.json  case3.json  case4.json  case5.json  case6.json  case7.json  case8.json  case9.json
project2/clean/: clean2.cc
project2/kernels/: grad_case1.cc  grad_case10.cc  grad_case2.cc  grad_case3.cc  grad_case4.cc  grad_case5.cc  grad_case6.cc  grad_case7.cc  grad_case8.cc  grad_case9.cc
project2/solution/: solution2.cc
src/: IR.cc  IRMutator.cc  IRPrinter.cc  IRVisitor.cc
test/: CMakeLists.txt  conv2d.cc  gemm.cc  ir_mutator.cc
